--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        
-    </head>
-    <body>
-        "hello world"
-        "hello hello"
-    </body>
+  <head> </head>
+  <body>
+    <p>this is a test</p>
+    <p>currently testing codesandbox</p>
+  </body>
 </html>
