--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
   <body>
     <p>this is a test</p>
     <p>currently testing codesandbox</p>
+    <p>
+      it seems like I gotta make a fork from github everytime I start editing
+      the code.
+    </p>
+    <p>well, let's start makeing some web3 projects.</p>
   </body>
 </html>
