--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <title>NFT Lending Protocol</title>
+  </head>
   <body>
-    <p>this is a test</p>
-    <p>currently testing codesandbox</p>
-    <p>
-      it seems like I gotta make a fork from github everytime I start editing
-      the code.
-    </p>
-    <p>well, let's start makeing some web3 projects.</p>
+    <div class="header">
+      <div><h1>NFT Lending Protocol</h1></div>
+      <div>
+        menu1
+      </div>
+      <div>
+        menu2
+      </div>
+      <div>
+        menu3
+      </div>
+      <div>
+        connect wallet
+      </div>
+    </div>
+    <div>
+      <h2>Your NFTs</h2>
+    </div>
+    <div>
+      <h2>Staked NFTs</h2>
+    </div>
   </body>
 </html>
