--- a/index.html
+++ b/index.html
@@ -2,28 +2,35 @@
 <html>
   <head>
     <title>NFT Lending Protocol</title>
+    <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <body>
-    <div class="header">
-      <div><h1>NFT Lending Protocol</h1></div>
-      <div>
-        menu1
+    <div class="container">
+      <div class="header">
+          <h1 class="siteTitle">Copernaum</h1>
       </div>
-      <div>
-        menu2
+      <div class="siteMenu">
+        <div class="menu">LEND</div>
+        <div class="menu">BORROW</div>
+        <div class="menu">STAKE</div>
+        <div class="menu">GOVERNANCE</div>
       </div>
-      <div>
-        menu3
+      <div class="section">
+        <h2 class="section">YOUR NFTs</h2>
+        <div class="itemContainer">
+          <div class="item">
+           <img class="item" src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png">
+           <h3 class="item">BAYC #189</h3>
+          </div>
+          <div class="item">
+            <img class="item" src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png">
+            <h3 class="item">BAYC #189</h3>
+            <button class="item">lend</button>
+         </div>
+        </div>
       </div>
-      <div>
-        connect wallet
-      </div>
-    </div>
-    <div>
-      <h2>Your NFTs</h2>
-    </div>
-    <div>
-      <h2>Staked NFTs</h2>
-    </div>
+      <div class="section">
+          <h2 class="section">LENDING NFTs</h2>
+        </div>
   </body>
 </html>
