--- a/index.html
+++ b/index.html
@@ -7,30 +7,100 @@
   <body>
     <div class="container">
       <div class="header">
-          <h1 class="siteTitle">Copernaum</h1>
+        <h1 class="siteTitle">Copernaum</h1>
       </div>
       <div class="siteMenu">
-        <div class="menu">LEND</div>
-        <div class="menu">BORROW</div>
-        <div class="menu">STAKE</div>
-        <div class="menu">GOVERNANCE</div>
+        <div class="menu">Lend</div>
+        <div class="menu">Borrow</div>
+        <div class="menu">Stake</div>
+        <div class="menu">Governance</div>
       </div>
       <div class="section">
-        <h2 class="section">YOUR NFTs</h2>
+        <h2 class="section">Deposits</h2>
         <div class="itemContainer">
           <div class="item">
-           <img class="item" src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png">
-           <h3 class="item">BAYC #189</h3>
+            <img
+              class="item"
+              src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png"
+            />
+            <h3 class="item">BAYC #189</h3>
+            <button class="item">claim</button>
+            <button class="item">withdraw</button>
           </div>
           <div class="item">
-            <img class="item" src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png">
+            <img
+              class="item"
+              src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png"
+            />
             <h3 class="item">BAYC #189</h3>
-            <button class="item">lend</button>
-         </div>
+            <button class="item">claim</button>
+            <button class="item">withdraw</button>
+          </div>
+          <div class="item">
+            <img
+              class="item"
+              src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png"
+            />
+            <h3 class="item">BAYC #189</h3>
+            <button class="item">claim</button>
+            <button class="item">withdraw</button>
+          </div>
+          <div class="item">
+            <img
+              class="item"
+              src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png"
+            />
+            <h3 class="item">BAYC #189</h3>
+            <button class="item">claim</button>
+            <button class="item">withdraw</button>
+          </div>
         </div>
       </div>
       <div class="section">
-          <h2 class="section">LENDING NFTs</h2>
+        <h2 class="section">Your Wallet</h2>
+        <div class="itemContainer">
+          <div class="item">
+            <img
+              class="item"
+              src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png"
+            />
+            <h3 class="item">BAYC #189</h3>
+            <button class="item">lend</button>
+          </div>
+          <div class="item">
+            <img
+              class="item"
+              src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png"
+            />
+            <h3 class="item">BAYC #189</h3>
+            <button class="item">lend</button>
+          </div>
+          <div class="item">
+            <img
+              class="item"
+              src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png"
+            />
+            <h3 class="item">BAYC #189</h3>
+            <button class="item">lend</button>
+          </div>
+          <div class="item">
+            <img
+              class="item"
+              src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png"
+            />
+            <h3 class="item">BAYC #189</h3>
+            <button class="item">lend</button>
+          </div>
+          <div class="item">
+            <img
+              class="item"
+              src="https://image.binance.vision/editor-uploads-original/9c15d9647b9643dfbc5e522299d13593.png"
+            />
+            <h3 class="item">BAYC #189</h3>
+            <button class="item">lend</button>
+          </div>
         </div>
+      </div>
+    </div>
   </body>
 </html>
